Fill basic pet info in documentation

--- a/docs/markdown-features.mdx
+++ b/docs/markdown-features.mdx
@@ -1,10 +1,12 @@
 ---
-sidebar_position: 4
+sidebar_position: 2
 ---
 
 # Markdown Features
 
 Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
+
+[This is a much better in depth resource though](https://www.markdownguide.org/hacks/)
 
 ## Front Matter
 
@@ -90,7 +92,7 @@ Docusaurus has a special syntax to create admonitions and callouts:
 Use this awesome feature option
 
 :::
-
+  
 :::danger Take care
 
 This action is dangerous
