--- a/docs/markdown-features.mdx
+++ b/docs/markdown-features.mdx
@@ -6,7 +6,10 @@ sidebar_position: 2
 
 Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
 
-[This is a much better in depth resource though](https://www.markdownguide.org/hacks/)
+* [Another markdown guide!](https://www.markdownguide.org/hacks/) 
+* :brain:[Need some emojis?](https://infinitbility.com/markdown-emoji-example-with-code):rocket:
+* Docusaurus is built on [MDX V1](https://mdxjs.com/guides/)
+
 
 ## Front Matter
 
@@ -66,25 +69,31 @@ function HelloDocusaurus() {
 
 Docusaurus has a special syntax to create admonitions and callouts:
 
-    :::tip My tip
-
-    Use this awesome feature option
-
-    :::
-
-    :::danger Take care
-
-    This action is dangerous
-
-    :::
-
-:::tip My tip
+:::tip "tip" My tip
 
 Use this awesome feature option
 
 :::
-  
-:::danger Take care
+
+:::note "note" Take care
+
+This action is dangerous
+
+:::
+
+:::caution "caution" Take care
+
+This action is dangerous
+
+:::
+
+:::important "important" Take care
+
+This action is dangerous
+
+:::
+
+:::danger "danger" Take care
 
 This action is dangerous
 
