change to mdx and version bump

--- a/docs/pets/scout.mdx
+++ b/docs/pets/scout.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_label: About Olympia
-sidebar_position: 4
+sidebar_label: About Scout
+sidebar_position: 5
 tags:
- - Olympia
+ - Scout
 ---
 
-# Olympia
+# Scout
 
 Scout is our little princess cat. She is very social, but very shy around dogs, especially around dogs that she doesn't live with. 
 
@@ -18,3 +18,8 @@ When the weather is nice, and given the opportunity, she will sneak out of the b
 ## Litterbox
 
 Scout's litterbox is in the bathroom, in a cupboard across from the shower. The cupboard door should always remain open, the bathroom door should stay open whenever its not in use. :point_up: Scout will usually visit the bathroom with you and eat, or just stand around with you
+
+## Routine
+
+Most days Scoutie just lays around in her favorite spots and eats. Expect her to attempt to join you in the bathroom whenever possible.
+
