--- a/docs/pets/scout.mdx
+++ b/docs/pets/scout.mdx
@@ -4,6 +4,8 @@ sidebar_position: 5
 tags:
  - Scout
 ---
+import Scoutiefood from './templates.mdx'
+import './index.js'
 
 # Scout
 
@@ -23,3 +25,13 @@ Scout's litterbox is in the bathroom, in a cupboard across from the shower. The 
 
 Most days Scoutie just lays around in her favorite spots and eats. Expect her to attempt to join you in the bathroom whenever possible.
 
+
+
+<form name="contact" method="post" data-netlify="true" data-netlify-honeypot="bot-field">
+  {/* You still need to add the hidden input with the form name to your JSX form */}
+  <input type="hidden" name="form-name" value="contact" />
+    <label for="name">Your Name: 
+        <input type="name" onSubmit={handleChange} />
+    </label>
+    <button type="submit">Send!</button>
+</form>
